--- a/Our Menu/index.html
+++ b/Our Menu/index.html
@@ -1,1 +1,261 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Our Other Menu - Roti Sobek Halalin</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+  <style>
+    :root {
+      --tosca: #40b7af;
+      --tosca-dark: #2f8f8b;
+      --bg-light: #e6f7f7;
+      --white: #ffffff;
+      --shadow-soft: 0 10px 30px rgba(64,183,175,0.15);
+      --shadow-hard: 0 5px 15px rgba(0,0,0,0.1);
+      --transition: 0.3s ease;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: var(--bg-light);
+      margin: 0;
+      padding: 0;
+      color: #002f2f;
+    }
+
+    /* HEADER ATAS */
+    header {
+      background: linear-gradient(135deg, var(--tosca), var(--tosca-dark));
+      padding: 45px 20px;
+      text-align: center;
+      color: white;
+      border-radius: 0 0 22px 22px;
+      box-shadow: var(--shadow-soft);
+    }
+
+    header h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 2.9rem;
+      margin: 0;
+    }
+
+    .container {
+      max-width: 1200px;
+      margin: 50px auto;
+      padding: 0 20px;
+    }
+
+    /* GRID MENU */
+    .menu-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+      gap: 35px;
+    }
+
+    .menu-card {
+      background: white;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: var(--shadow-hard);
+      transition: var(--transition);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .menu-card:hover {
+      transform: translateY(-8px);
+      box-shadow: var(--shadow-soft);
+    }
+
+    .menu-card img {
+      width: 100%;
+      height: 240px;
+      object-fit: cover;
+    }
+
+    .menu-content {
+      padding: 22px 25px;
+      flex-grow: 1;
+    }
+
+    .menu-content h3 {
+      font-family: 'Playfair Display', serif;
+      font-size: 1.9rem;
+      color: var(--tosca-dark);
+      margin-bottom: 12px;
+    }
+
+    .menu-content p {
+      font-size: 1.15rem;
+      line-height: 1.7;
+      color: #333;
+      white-space: pre-line;
+    }
+
+    /* === TOMBOL ORDER PREMIUM === */
+    .order-btn {
+      background: linear-gradient(90deg, #40b7af, #5cc4ff);
+      color: white;
+      border: none;
+      padding: 16px 0;
+      border-radius: 14px;
+      font-size: 1.18rem;
+      font-weight: 700;
+      cursor: pointer;
+      width: 85%;
+      margin: 22px auto 30px;
+      display: block;
+      text-align: center;
+      box-shadow: 0 8px 18px rgba(64, 183, 175, 0.35);
+      transition: 0.3s;
+    }
+
+    .order-btn:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 12px 25px rgba(64, 183, 175, 0.5);
+      background: linear-gradient(90deg, #2ea39e, #42b9ff);
+    }
+
+    /* === TOMBOL KEMBALI === */
+    .top-right-back {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background: linear-gradient(90deg, #40b7af, #5cc4ff);
+  color: white;
+  padding: 12px 25px;
+  border-radius: 12px;
+  font-size: 1rem;
+  font-weight: 600;
+  text-decoration: none;
+  box-shadow: 0 6px 15px rgba(64,183,175,0.35);
+  transition: 0.3s ease;
+}
+
+.top-right-back:hover {
+  background: linear-gradient(90deg, #2ea39e, #42b9ff);
+  box-shadow: 0 10px 20px rgba(64,183,175,0.5);
+  transform: translateY(-3px);
+}
+  </style>
+</head>
+
+<body>
+<header>
+  <h1>Our Other Menu</h1>
+  <h3>by halalincake</h3>
+  <a href="https://rotisobekhalalin.my.id/" class="top-right-back">Kembali ke Beranda</a>
+</header>
+
+<div class="container">
+
+  <div class="menu-grid">
+
+    <!-- 1 Donat Labu Kuning -->
+    <div class="menu-card">
+      <img src="/ourmenu/donut.png" alt="Donat Labu Kuning">
+      <div class="menu-content">
+        <h3>Donat Labu Kuning</h3>
+        <p>
+Premium Donat dengan tambahan buah labu kuning asli, tersedia Topping Classic Cheddar, Ceres Coklat, White Almond, Tiramisu Black Cookies, Blackforest, dan Original Gula Bubuk.
+Minimal order 6 box.
+        </p>
+      </div>
+      <button class="order-btn"
+        onclick="window.location.href='https://wa.me/6281280230885?text=Saya%20ingin%20order%20Donat%20Labu%20Kuning'">
+        ORDER VIA WHATSAPP
+      </button>
+    </div>
+
+    <!-- 2 Bomboloni Bomb -->
+    <div class="menu-card">
+      <img src="/ourmenu/bomboloni.png" alt="Bomboloni Bomb">
+      <div class="menu-content">
+        <h3>Bomboloni Bomb</h3>
+        <p>
+Bomboloni Labu Kuning dengan isian cream premium rasa Original, Coklat, Stroberi, Bluberry, Matcha, & Tiramisu.
+Minimal order 6 box.
+        </p>
+      </div>
+      <button class="order-btn"
+        onclick="window.location.href='https://wa.me/6281280230885?text=Saya%20ingin%20order%20Bomboloni%20Bomb'">
+        ORDER VIA WHATSAPP
+      </button>
+    </div>
+
+    <!-- 3 Soes Papa -->
+    <div class="menu-card">
+      <img src="/ourmenu/soes.png" alt="Soes Papa">
+      <div class="menu-content">
+        <h3>Soes Papa</h3>
+        <p>
+Soes Premium Klasik dengan topping Vanilla dan Coklat.
+Minimal order 6 box.
+        </p>
+      </div>
+      <button class="order-btn"
+        onclick="window.location.href='https://wa.me/6281280230885?text=Saya%20ingin%20order%20Soes%20Papa'">
+        ORDER VIA WHATSAPP
+      </button>
+    </div>
+
+    <!-- 4 Creamy Puff Almond -->
+    <div class="menu-card">
+      <img src="/ourmenu/creamypuff.png" alt="Creamy Puff Almond">
+      <div class="menu-content">
+        <h3>Creamy Puff Almond</h3>
+        <p>
+Cream Puff renyah berisi vla pastry lembut dan ditaburi kacang almond sehingga menghasilkan rasa renyah, gurih, manis, dan enak.
+Minimal order 6 box.
+        </p>
+      </div>
+      <button class="order-btn"
+        onclick="window.location.href='https://wa.me/6281280230885?text=Saya%20ingin%20order%20Creamy%20Puff%20Almond'">
+        ORDER VIA WHATSAPP
+      </button>
+    </div>
+
+    <!-- 5 Snack Box Premium -->
+    <div class="menu-card">
+      <img src="/ourmenu/cheescake.png" alt="cheescake premium">
+      <div class="menu-content">
+        <h3>cheescake Premium</h3>
+        <p>
+Custom Cheesecake:
+Cheesecake premium dengan topping selai coklat, stroberi dan chocoball.
+        </p>
+      </div>
+      <button class="order-btn"
+        onclick="window.location.href='https://wa.me/6281280230885?text=Saya%20ingin%20order%20Snack%20Box%20Premium'">
+        ORDER VIA WHATSAPP
+      </button>
+    </div>
+
+    <!-- 6 Brownies Panggang -->
+    <div class="menu-card">
+      <img src="/ourmenu/brownies.png" alt="Brownies Panggang">
+      <div class="menu-content">
+        <h3>Brownies Panggang</h3>
+        <p>
+Brownies crunchy di luar tetapi chewy dan soft di dalam, dengan rasa coklat premium dan kuat.
+Ready stock setiap hari.
+        </p>
+      </div>
+      <button class="order-btn"
+        onclick="window.location.href='https://wa.me/6281280230885?text=Saya%20ingin%20order%20Brownies%20Panggang'">
+        ORDER VIA WHATSAPP
+      </button>
+    </div>
+
+  </div>
+
+</div>
+
+</body>
+</html>
