--- a/outlate/index.html
+++ b/outlate/index.html
@@ -1,1 +1,433 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Lokasi Outlet - Roti Sobek Halalin</title>
 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+
+<style>
+:root {
+  --tosca:#40b7af;
+  --tosca-dark:#2f8f8b;
+  --tosca-deep:#1a5e5b;
+  --bg-light:#f4fcfc;
+  --text-main:#0f172a;
+  --text-muted:#64748b;
+  --white:#ffffff;
+  --shadow-card:0 10px 30px -5px rgba(0,0,0,0.1);
+  --radius:16px;
+}
+
+*{box-sizing:border-box;margin:0;padding:0;}
+
+body{
+  font-family:'Montserrat',sans-serif;
+  background:var(--bg-light);
+  color:var(--text-main);
+  padding-top:80px;
+  padding-bottom:50px;
+}
+
+/* NAVBAR */
+.navbar{
+  position:fixed;
+  top:0;left:0;right:0;
+  height:70px;
+  background:rgba(255,255,255,0.85);
+  backdrop-filter:blur(12px);
+  border-bottom:1px solid rgba(64,183,175,0.2);
+  display:flex;
+  align-items:center;
+  justify-content:space-between;
+  padding:0 5%;
+  z-index:1000;
+}
+
+.brand{
+  font-family:'Playfair Display',serif;
+  font-size:1.5rem;
+  color:var(--tosca-dark);
+  font-weight:700;
+}
+
+.nav-btn{
+  text-decoration:none;
+  color:var(--tosca-deep);
+  font-weight:600;
+  font-size:0.9rem;
+  padding:8px 16px;
+  border:2px solid var(--tosca);
+  border-radius:50px;
+  transition:0.3s;
+}
+
+.nav-btn:hover{
+  background:var(--tosca);
+  color:white;
+}
+
+/* HERO */
+.hero{
+  text-align:center;
+  padding:40px 20px;
+  max-width:800px;
+  margin:0 auto;
+}
+
+.hero h1{
+  font-family:'Playfair Display',serif;
+  font-size:2.6rem;
+  color:var(--tosca-deep);
+}
+
+.hero p{
+  color:var(--text-muted);
+  margin-top:10px;
+}
+
+/* GRID */
+.container{
+  max-width:1200px;
+  margin:20px auto;
+  padding:0 20px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(350px,1fr));
+  gap:30px;
+}
+
+/* CARD */
+.outlet-card{
+  background:white;
+  border-radius:var(--radius);
+  overflow:hidden;
+  box-shadow:var(--shadow-card);
+  transition:0.3s;
+  position:relative;
+  display:flex;
+  flex-direction:column;
+}
+
+.outlet-card:hover{
+  transform:translateY(-8px);
+  box-shadow:0 20px 40px -5px rgba(64,183,175,0.25);
+}
+
+/* STATUS */
+.status-badge{
+  position:absolute;
+  top:15px;
+  right:15px;
+  padding:6px 12px;
+  border-radius:20px;
+  font-size:0.75rem;
+  font-weight:700;
+  z-index:10;
+}
+
+.status-open{background:#d1fae5;color:#047857;}
+.status-closed{background:#fee2e2;color:#b91c1c;}
+
+/* SLIDER */
+/* === FULL IMAGE MODE (NO CROPPING) === */
+
+.outlet-img-wrapper{
+  position:relative;
+  width:100%;
+  min-height:400px;   /* Tinggi lebih besar */
+  background:#f1f5f9; /* Background biar elegan */
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  overflow:hidden;
+}
+
+.slider{
+  display:flex;
+  transition:transform 0.6s cubic-bezier(.77,0,.18,1);
+  width:100%;
+  height:100%;
+}
+
+.slide{
+  min-width:100%;
+  max-height:400px;
+  object-fit:contain;  /* 🔥 INI KUNCINYA */
+}
+
+.slide-btn{
+  position:absolute;
+  top:50%;
+  transform:translateY(-50%);
+  background:rgba(0,0,0,0.4);
+  color:white;
+  border:none;
+  padding:8px 12px;
+  cursor:pointer;
+  border-radius:50%;
+  font-size:18px;
+  transition:0.3s;
+  z-index:10;
+}
+
+.slide-btn:hover{
+  background:rgba(0,0,0,0.8);
+}
+
+.prev{left:12px;}
+.next{right:12px;}
+
+.dots{
+  position:absolute;
+  bottom:12px;
+  left:50%;
+  transform:translateX(-50%);
+  display:flex;
+  gap:6px;
+}
+
+.dot{
+  width:8px;
+  height:8px;
+  background:rgba(255,255,255,0.5);
+  border-radius:50%;
+  cursor:pointer;
+  transition:0.3s;
+}
+
+.dot.active{
+  background:white;
+  transform:scale(1.3);
+}
+
+/* BODY */
+.card-body{
+  padding:25px;
+  flex-grow:1;
+  display:flex;
+  flex-direction:column;
+}
+
+.card-body h2{
+  font-family:'Playfair Display',serif;
+  color:var(--tosca-deep);
+}
+
+.address{
+  font-size:0.9rem;
+  color:var(--text-muted);
+  margin:10px 0 15px;
+}
+
+.info-row{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  margin-bottom:8px;
+}
+
+.map-frame{
+  width:100%;
+  height:180px;
+  border:0;
+  border-radius:8px;
+  margin-top:15px;
+}
+
+.btn-group{
+  margin-top:20px;
+  display:flex;
+  gap:10px;
+}
+
+.btn{
+  flex:1;
+  padding:10px;
+  border-radius:8px;
+  text-align:center;
+  text-decoration:none;
+  font-weight:600;
+  font-size:0.9rem;
+  transition:0.2s;
+}
+
+.btn-primary{
+  background:var(--tosca);
+  color:white;
+}
+
+.btn-primary:hover{background:var(--tosca-dark);}
+
+.btn-outline{
+  border:1px solid var(--tosca);
+  color:var(--tosca);
+}
+
+.btn-outline:hover{background:#e0fbfb;}
+
+footer{
+  text-align:center;
+  margin-top:40px;
+  color:var(--text-muted);
+  font-size:0.9rem;
+}
+</style>
+</head>
+
+<body>
+
+<nav class="navbar">
+<div class="brand">Halalin Locations</div>
+<button class="nav-btn" onclick="window.location.href='https://rotisobekhalalin.my.id/'">⬅ Kembali ke Home</button>
+</nav>
+
+<header class="hero">
+<h1>Kunjungi Outlet Kami</h1>
+<p>Temukan kehangatan Roti Sobek Halalin di outlet terdekat dari lokasi Anda.</p>
+</header>
+
+<main class="container" id="outletContainer"></main>
+
+<footer>
+&copy; 2024 Roti Sobek Halalin. All Rights Reserved.
+</footer>
+
+<script>
+
+/* DATA OUTLET */
+const outlets = [
+{
+id:1,
+name:"Roti Sobek Halalin",
+address:"Jl. Raya Kalisuren, Kec. Tajur Halang, Kabupaten Bogor, Jawa Barat",
+phone:"+6285123367748",
+images:[
+"/images/kalisurendepan.png",
+"/images/kalisurendalem.png"
+],
+gmapsLink:"https://maps.app.goo.gl/Mcb3fSywk62KGc1M7",
+embedUrl:"https://www.google.com/maps/embed?pb=!1m18..."
+}
+];
+
+/* STATUS */
+function getStatusBadge(){
+const hour=new Date().getHours();
+const isOpen=hour>=7 && hour<21;
+return isOpen?
+`<span class="status-badge status-open">● Buka Sekarang</span>`:
+`<span class="status-badge status-closed">● Tutup (Buka 07:00)</span>`;
+}
+
+/* RENDER */
+function renderOutlets(){
+const container=document.getElementById('outletContainer');
+const statusHTML=getStatusBadge();
+
+outlets.forEach(outlet=>{
+const card=document.createElement('article');
+card.className='outlet-card';
+
+card.innerHTML=`
+${statusHTML}
+
+<div class="outlet-img-wrapper">
+<div class="slider" id="slider-${outlet.id}">
+${outlet.images.map(img=>`
+<img src="${img}" class="slide"
+onerror="this.src='https://via.placeholder.com/400x220?text=Foto+Outlet'">
+`).join('')}
+</div>
+
+<button class="slide-btn prev" onclick="prevSlide(${outlet.id})">❮</button>
+<button class="slide-btn next" onclick="nextSlide(${outlet.id})">❯</button>
+
+<div class="dots" id="dots-${outlet.id}">
+${outlet.images.map((_,i)=>`
+<div class="dot ${i===0?'active':''}"
+onclick="goToSlide(${outlet.id},${i})"></div>
+`).join('')}
+</div>
+</div>
+
+<div class="card-body">
+<h2>${outlet.name}</h2>
+<p class="address">${outlet.address}</p>
+
+<div class="info-row">📞 <b>${outlet.phone}</b></div>
+<div class="info-row">⏰ 07:00 – 21:00 WIB</div>
+
+<iframe class="map-frame" src="${outlet.embedUrl}" loading="lazy"></iframe>
+
+<div class="btn-group">
+<a href="https://wa.me/${outlet.phone}" class="btn btn-outline" target="_blank">Chat Admin</a>
+<a href="${outlet.gmapsLink}" class="btn btn-primary" target="_blank">Rute Lokasi ➜</a>
+</div>
+</div>
+`;
+
+container.appendChild(card);
+initSlider(outlet.id);
+});
+}
+
+/* SLIDER LOGIC */
+const sliders={};
+const autoIntervals={};
+
+function initSlider(id){
+sliders[id]=0;
+autoSlide(id);
+
+const wrapper=document.getElementById(`slider-${id}`).parentElement;
+
+let startX=0;
+
+wrapper.addEventListener("touchstart",e=>{
+startX=e.touches[0].clientX;
+});
+
+wrapper.addEventListener("touchend",e=>{
+let endX=e.changedTouches[0].clientX;
+if(startX-endX>50)nextSlide(id);
+if(endX-startX>50)prevSlide(id);
+});
+
+wrapper.addEventListener("mouseenter",()=>clearInterval(autoIntervals[id]));
+wrapper.addEventListener("mouseleave",()=>autoSlide(id));
+}
+
+function updateSlide(id){
+const slider=document.getElementById(`slider-${id}`);
+const dots=document.querySelectorAll(`#dots-${id} .dot`);
+const total=slider.children.length;
+
+if(sliders[id]>=total)sliders[id]=0;
+if(sliders[id]<0)sliders[id]=total-1;
+
+slider.style.transform=`translateX(-${sliders[id]*100}%)`;
+
+dots.forEach(dot=>dot.classList.remove("active"));
+dots[sliders[id]].classList.add("active");
+}
+
+function nextSlide(id){sliders[id]++;updateSlide(id);}
+function prevSlide(id){sliders[id]--;updateSlide(id);}
+function goToSlide(id,index){sliders[id]=index;updateSlide(id);}
+
+function autoSlide(id){
+autoIntervals[id]=setInterval(()=>{
+sliders[id]++;
+updateSlide(id);
+},4000);
+}
+
+document.addEventListener("DOMContentLoaded",renderOutlets);
+
+</script>
+
+</body>
+</html>
